# geometry-2d

./: .gitignore  .gitmodules  CMakeLists.txt  geometry_2d.sln  main.cpp
geometry_2d/: geometry_2d.vcxproj  geometry_2d.vcxproj.filters  main.cpp  shape.cpp  shape.h
geometry_2d/shape/: line.h  shape.cpp
geometry_draw/: utilities.cpp
include/: GLUtility.h  line.h  shape.h  utilities.h
include/glad/: glad.h
src/: CMakeLists.txt  glad.c  main.cpp  shape.cpp
src/_shaders/: fragment.frag  fragment2.frag  fragment_circle.frag  vertex.vert  vertex2.vert
